--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        main{
+            text-align: center;
+        }
+    </style>
     <title>Első git repo</title>
 </head>
 <body>
-    <button>Kattints rám!</button>
+    <main>
+        <button >Kattints rám!</button>
+    </main>
 </body>
 </html>
