A gomb közép-középére helyezése!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         main{
-            text-align: center;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        body{
+            margin: 0;
         }
     </style>
     <title>Első git repo</title>
